登录注册页面

--- a/src/styls/mixin.less
+++ b/src/styls/mixin.less
@@ -23,3 +23,9 @@
 	padding-left:unit(@left/37.5,rem);
 	padding-right:unit(@right/37.5,rem);
 }
+.margin(@top,@right,@bottom,@left){
+	margin-top:unit(@top/37.5,rem);
+	margin-bottom:unit(@bottom/37.5,rem);
+	margin-left:unit(@left/37.5,rem);
+	margin-right:unit(@right/37.5,rem);
+}
