各组件的切换

--- a/src/styls/mixin.less
+++ b/src/styls/mixin.less
@@ -17,6 +17,12 @@
 .top(@px){
 	top:unit(@px/37.5, rem);
 }
+.left(@px){
+	left:unit(@px/37.5, rem);
+}
+.bottom(@px){
+	bottom:unit(@px/37.5, rem);
+}
 .right(@px){
 	right:unit(@px/37.5, rem);
 }
